Feat: login and registration with token in cookie

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 backend/class/connection/config
 backend/class/connection/config-prod
 backend/public
+
+frontend/iorio/public
 frontend/iorio/node_modules
+node_modules
