--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
+    "react-scroll": "^1.9.0",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
